--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <dependency>
             <groupId>net.sourceforge.streamsupport</groupId>
             <artifactId>jamu</artifactId>
-            <version>1.1.1</version>
+            <version>1.2.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
